mlsa-k8s/kubernetes/L4-network/allow-ingress.yaml
# L4 - NetworkPolicy: Allow Ingress Traffic
# Allows traffic from NGINX Ingress controller

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8080
